# wyoming-macos-tts

./: .gitignore  README.md  pyproject.toml
.gitea/workflows/: format.yaml
script/: install.py
tests/: test_macos_tts.py
wyoming_macos_tts/: __init__.py  __main__.py  handler.py  info.py
