[project]
name = "wyoming-macos-tts"
version = "2.0.0.0"
description = "Wyoming server for Text-to-Speech on macOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"},
    {name = "OpenHoster", email = "openhosterlab@gmail.com"}
]
keywords = ["rhasspy", "wyoming", "macos", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.7.2,<1.8",
    "sentence-stream==1.1.0",
]

[project.urls]
Homepage = "https://github.com/openhoster/wyoming-macos-tts"

[project.scripts]
wyoming-macos-tts = "wyoming_macos_tts.__main__:run"

[tool.setuptools.packages.find]
include = ["wyoming_macos_tts"]
exclude = ["tests", "tests.*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.1.0",
    "build==1.2.2",
    "scipy>=1.10,<2",
    "numpy>=1.20,<2",
    "python-speech-features==0.6",
]
